--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Sep 03 14:10:05 KST 2016
-sdk.dir=/home/lim/Android/Sdk
+#Tue Sep 06 19:40:27 KST 2016
+sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
