--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 18 20:57:17 KST 2016
-sdk.dir=C\:\\Users\\JUNGA\\AppData\\Local\\Android\\Sdk
+#Tue Oct 25 19:23:51 KST 2016
+sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
